deploy/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: existing-single-inrepo-port-ingress-autodeploy-20250820102533
spec:
  ingressClassName: nginx
  rules:
  - host: HOSTNAME_PLACEHOLDER
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: existing-single-inrepo-port-ingress-autodeploy-20250820102533
            port:
              number: 80
